[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-task-planner"
version = "0.1.0"
description = "AI Task Planner"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0",
]

[project.scripts]
openenv-server = "server.app:main"

[tool.openenv]
entrypoint = "environment:TaskEnv"
